kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-portal
  labels:
    app.kubernetes.io/name: secure-portal
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: secure-portal
  ports:
    - name: http
      port: 80
      targetPort: http
